[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ark-api"
version = "1.0.0"
authors = [
  { name="Kenny Hommel", email="kennyhommel36@gmail.com" },
]
description = "Python API for ark automation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kennyhml/ark.py"
"Bug Tracker" = "https://github.com/kennyhml/ark.py/issues"