[metadata]
name = "ark-api"
license_files = LICENSE

[options]
package_dir=
    =src
packages = find:
zip_safe = False
python_requires = >= 3
install_requires =
    discord==1.7.3
    discord.py==1.7.3
    dacite
    requests
    pyautogui
    pydirectinput
    pynput
    pytesseract
    opencv-python
    pillow
    numpy
    mss
    pywin32
    screeninfo
    pygetwindow
    psutil
    keyboard
    mouse
    python-a2s
    
    
include_package_data = True

[options.package_data]
ark = 
  *.png

[options.packages.find]
where = src
exclude =
    tests*
    .gitignore